tests/snapshots/integration__integration_tests__spacing_edge_cases__short_branch_names.snap
---
source: tests/integration_tests/spacing_edge_cases.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpxzB0gf/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
Branch  Path         Age            Commit    Message                                                               
[1m[35mmain  [0m  [1m[35m./test-repo[0m  [2m10 months ago[0m  [2mb834638e[0m  [2mInitial commit[0m                                                      
[2ma     [0m  [2m./a        [0m  [2m10 months ago[0m  [2mb834638e[0m  [2mInitial commit[0m                                                      
[2mbb    [0m  [2m./bb       [0m  [2m10 months ago[0m  [2mb834638e[0m  [2mInitial commit[0m                                                      
[2mccc   [0m  [2m./ccc      [0m  [2m10 months ago[0m  [2mb834638e[0m  [2mInitial commit[0m                                                      

[2mShowing 4 worktrees[0m

----- stderr -----
